<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    >


    <ImageView
        android:id="@+id/finsh"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/sp_10"
        android:src="@mipmap/leftdetail"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_15" />

    <TextView
        android:id="@+id/tel_register"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_login"
        android:textColor="#ff000000"
        android:textSize="@dimen/sp_24"
        />
    <EditText
        android:inputType="phone"
        android:id="@+id/ed_username"
        android:layout_width="@dimen/dp_344"
        android:textCursorDrawable="@drawable/edittext_guangbiao"

        android:layout_height="wrap_content"
        android:layout_below="@+id/tel_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_44"
        android:hint="@string/telphone" />

    <EditText
        android:inputType="number"
        android:id="@+id/ed_code"
        android:layout_width="@dimen/dp_344"
        android:textCursorDrawable="@drawable/edittext_guangbiao"

        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_24"
        android:hint="@string/code" />

    <TextView
        android:id="@+id/login"
        android:layout_marginTop="@dimen/dp_180"
        android:layout_marginStart="@dimen/dp_260"
        android:gravity="center"
        android:background="@mipmap/bluetuo"
        android:layout_width="@dimen/dp_81"
        android:layout_height="@dimen/dp_32"
        android:text="获取验证码"
        android:textColor="#ffffffff"
        android:textSize="14sp"
        />


    <TextView
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_335"
        android:layout_height="@dimen/dp_42"
        android:layout_below="@id/ed_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@mipmap/login_button"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="18sp" />
</RelativeLayout>