<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <RelativeLayout
        android:id="@+id/tool_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <ImageView
            android:id="@+id/finish"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@mipmap/leftdetail" />

        <TextView
            android:id="@+id/tool_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/report"
            android:textColor="#ff000000"
            android:textSize="@dimen/sp_16" />


    </RelativeLayout>

    <View
        android:id="@+id/fen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_below="@+id/tool_relative"
        android:alpha="0.5"
        android:background="@color/Color999999" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_75"
        android:layout_below="@id/fen"
        android:layout_centerHorizontal="true"

        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/answer_card"
                android:layout_width="48dp"
                android:layout_height="22dp"
                android:layout_marginStart="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/answer_card"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:drawablePadding="@dimen/dp_4"
                android:drawableStart="@mipmap/icon_wrong_hint"
                android:layout_marginEnd="@dimen/dp_56"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/wrong"
                android:textColor="#ffcccccc"
                android:textSize="@dimen/sp_10" />
            <TextView
                android:drawablePadding="@dimen/dp_4"
                android:drawableStart="@mipmap/icon_right_hint"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/right"
                android:textColor="#ffcccccc"
                android:textSize="@dimen/sp_10" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recy_answer"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_card"
                android:layout_marginStart="@dimen/dp_17"

                android:layout_marginEnd="@dimen/dp_16">

            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_68"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/all_jiexi"
            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_43"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@mipmap/icon_jiexi"
            android:gravity="center"
            android:text="@string/all_jiexi"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wrong_jiexi"
            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_43"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@mipmap/icon_jiexi"
            android:gravity="center"
            android:text="@string/wrong_jieji"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>