<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <RelativeLayout
        android:id="@+id/tool_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <ImageView
            android:id="@+id/finish"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@mipmap/leftdetail" />

        <TextView
            android:id="@+id/tool_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="实名认证"
            android:textColor="#ff000000"
            android:textIsSelectable="true"
            android:textSize="@dimen/sp_16" />


    </RelativeLayout>

    <View
        android:id="@+id/fen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/tool_relative"
        android:alpha="0.5"
        android:background="#cccccc" />

    <TextView
        android:id="@+id/hint"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_below="@id/fen"
        android:layout_width="312dp"
        android:layout_height="17dp"
        android:text="@string/shiming"
        android:textColor="#ff999999"
        android:textSize="12sp"
        />
    <EditText
        android:inputType="phone"
        android:id="@+id/ed_username"
        android:layout_width="@dimen/dp_344"
        android:textCursorDrawable="@drawable/edittext_guangbiao"

        android:layout_height="wrap_content"
        android:layout_below="@+id/hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_44"
        android:hint="@string/telphone" />

    <EditText
        android:inputType="number"
        android:id="@+id/ed_code"
        android:layout_width="@dimen/dp_335"
        android:textCursorDrawable="@drawable/edittext_guangbiao"

        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_24"
        android:hint="@string/code" />

    <TextView
        android:id="@+id/login"
        android:layout_marginTop="@dimen/dp_180"
        android:layout_marginStart="@dimen/dp_260"
        android:gravity="center"
        android:background="@mipmap/bluetuo"
        android:layout_width="@dimen/dp_81"
        android:layout_height="@dimen/dp_32"
        android:text="获取验证码"
        android:textColor="#ffffffff"
        android:textSize="14sp"
        />


    <TextView
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_335"
        android:layout_height="@dimen/dp_42"
        android:layout_below="@id/ed_code"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@mipmap/login_button"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="18sp" />
</RelativeLayout>