<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/tool_relative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40">
            <ImageView
                android:id="@+id/finish"
                android:src="@mipmap/leftdetail"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_15"/>
            <TextView
                android:id="@+id/tool_title"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_book"
                android:textColor="#ff000000"
                android:textSize="@dimen/sp_16"
                />


        </RelativeLayout>
        <View
            android:id="@+id/fen"
            android:alpha="0.5"
            android:background="#cccccc"
            android:layout_below="@+id/tool_relative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
    <LinearLayout
        android:layout_below="@id/fen"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:id="@+id/ll_tab"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_senior"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_22"
            android:text="@string/senior"
            android:gravity="center"
            android:background="@drawable/chooseleft"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tv_junior"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_22"
            android:text="@string/junior"
            android:gravity="center"
            android:background="@drawable/righttuoyuan"
            android:textColor="#ff1091e9"
            android:textSize="12sp"
            />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/ll_tab"
        android:id="@+id/recy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>