<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_336"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:buzhi="http://schemas.android.com/tools"
    android:layout_centerHorizontal="true"
    android:background="@drawable/viewpager_radio10"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fenshu"
                android:drawablePadding="@dimen/dp_10"
                android:drawableLeft="@mipmap/icon_chengji"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fenshuorpaiming"
                android:textColor="#ff000000"
                android:textSize="16sp"
                />

            <View
                android:id="@+id/fen"
                android:alpha="0.5"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/Color999999"
                android:layout_below="@+id/fenshu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>
            
            <com.yingzhiyun.yingquxue.units.CircleProgressBar
                app:direction="top"
                app:max_progress="750"
                app:outside_color="@color/mainColor"
                app:outside_radius="@dimen/dp_70"
                app:progress="555"
                app:inside_color="#e1f9ff"
                app:progress_text_color="@color/mainColor"
                app:progress_text_size="@dimen/sp_14"
                app:progress_width="6dp"
                android:id="@+id/cp"
                app:title_color="#e1f9ff"


                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_below="@id/fen"
                android:layout_width="@dimen/dp_170"
                android:layout_height="@dimen/dp_170" />
            <TextView

                android:id="@+id/all_fen"

                android:textColor="#ff1091e9"
                android:textSize="40sp"
                android:layout_marginTop="@dimen/dp_65"
                android:layout_below="@id/fen"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/dp_5"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/all_fen"
                android:layout_width="76dp"
                android:layout_height="17dp"
                android:text="@string/kai"
                android:textColor="#ff666666"
                android:textSize="12sp"
                />

            <TextView
                android:drawablePadding="@dimen/dp_8"
                android:drawableStart="@mipmap/icon_allscore"
                android:layout_marginStart="@dimen/dp_67"
                android:layout_below="@+id/cp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manfen"
                android:id="@+id/manfen"
                android:textColor="#000000"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/all_score"
                android:layout_below="@+id/cp"
                android:layout_toEndOf="@+id/manfen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="750"
                android:layout_marginStart="@dimen/dp_8"
                android:textColor="#ff7ac5ff"
                android:textSize="14sp"
                />
            <TextView
                android:drawablePadding="@dimen/dp_8"
                android:drawableStart="@mipmap/icon_oncescore"
                android:layout_marginStart="@dimen/dp_47"
                android:layout_below="@+id/cp"
                android:layout_toEndOf="@+id/all_score"
                android:id="@+id/text_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="#ff000000"
                android:textSize="14sp"
                />
            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:layout_below="@+id/cp"
                android:id="@+id/defen"
                android:layout_toEndOf="@+id/text_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="520"
                android:textColor="#ff8c83ec"
                android:textSize="14sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@+id/manfen"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                android:id="@+id/recy_ranktype"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/pingjun"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@mipmap/icon_pingjun"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recy_ranktype"
                android:text="@string/pingjun"
                android:textColor="#ff000000"
                android:textSize="16sp"
                />
            <View
                android:id="@+id/fen1"
                android:alpha="0.5"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/Color999999"
                android:layout_below="@+id/pingjun"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/sp_10"
                android:layout_marginStart="@dimen/dp_20"

                android:layout_below="@+id/fen1"
                android:id="@+id/recy_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:id="@+id/duizhao"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@mipmap/icon_pingjun"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recy_average"
                android:text="@string/duizhao"
                android:textColor="#ff000000"
                android:textSize="16sp"
                />
            <View
                android:id="@+id/fen2"
                android:alpha="0.5"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/Color999999"
                android:layout_below="@+id/duizhao"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"/>

            <com.yingzhiyun.yingquxue.units.RadarMapView
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/fen2"
                android:layout_width="@dimen/dp_220"
                android:layout_height="@dimen/dp_200"
                android:id="@+id/radar_map" />
            <TextView
                android:layout_marginStart="@dimen/dp_97"
                android:id="@+id/youshi_text"
                android:layout_below="@+id/radar_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youshi"
                android:textColor="#ff333333"
                android:textSize="12sp"
                />

            <TextView
                android:layout_marginStart="@dimen/dp_43"
                android:layout_below="@+id/radar_map"
                android:layout_toRightOf="@+id/youshi_text"
                android:id="@+id/youshi_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="无"
                android:textColor="#ff1091e9"
                android:textSize="12sp"
                />
            <TextView
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_7"
                android:layout_marginStart="@dimen/dp_97"
                android:id="@+id/lieshi_text"
                android:layout_below="@+id/youshi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lieshi"
                android:textColor="#ff333333"
                android:textSize="12sp"
                />

            <TextView
                android:layout_marginTop="@dimen/dp_7"
                android:layout_marginStart="@dimen/dp_43"
                android:layout_below="@+id/youshi_text"
                android:layout_toEndOf="@+id/lieshi_text"
                android:id="@+id/lieshi_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全部"
                android:textColor="#ffdb253b"
                android:textSize="12sp"
                />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>